# treepics

./: .gitignore  LICENSE  README.md  deploy.py  index.html
conversations/: 2025-09-11-2201-summary.md  2025-09-12-0030-summary.md  2025-09-12-0113-summary.md  2025-09-12-2112-summary.md  aa-initial-treepics-prompt.md
css/: style.css
treepics-map/: convert_photos.py  deploy.py  index.html  main.py  pyproject.toml
treepics-map/css/: style.css
treepics-map/js/: map.js
treepics-map/output/: photo_metadata.csv
treepics-map/output/site/: index.html
treepics-map/output/site/css/: style.css
treepics-map/output/site/js/: map.js
treepics-map/photos/: README.md
treepics-map/src/treepics_map/: __init__.py  metadata_extractor.py  static_site_generator.py
